--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
   "author": "chaptergy",
   "license": "MIT",
   "dependencies": {
-    "custom-card-helpers": "^1.3.9",
-    "home-assistant-js-websocket": "^4.4.0",
+    "custom-card-helpers": "1.3.9",
+    "home-assistant-js-websocket": "^5.1.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@rollup/plugin-json": "^4.0.0",
-    "rollup": "^1.26.0",
-    "rollup-plugin-babel": "^4.3.3",
+    "@rollup/plugin-json": "^4.0.2",
+    "rollup": "^2.0.6",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-typescript2": "^0.24.3",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-typescript2": "^0.26.0",
     "rollup-plugin-uglify": "^6.0.3",
-    "typescript": "^3.6.4"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "rollup -c --watch",
