--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lightalarm-card",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Lovelace Lightalarm Card",
   "keywords": [
     "home-assistant",
@@ -15,29 +15,39 @@
   "author": "chaptergy",
   "license": "MIT",
   "dependencies": {
-    "custom-card-helpers": "1.3.9",
+    "custom-card-helpers": "^1.6.3",
     "home-assistant-js-websocket": "^5.1.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@rollup/plugin-json": "^4.0.2",
-    "rollup": "^2.0.6",
-    "rollup-plugin-babel": "^4.4.0",
+    "@rollup/plugin-json": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.19.1",
+    "rollup": "^1.26.0",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-serve": "^1.0.1",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-typescript2": "^0.26.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-typescript2": "^0.24.3",
     "rollup-plugin-uglify": "^6.0.3",
-    "typescript": "^3.8.3"
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "start": "rollup -c --watch",
-    "build": " npm run rollup",
+    "dev": "rollup -c rollup-dev.config.js --watch",
+    "build": "npm run lint && npm run rollup",
+    "lint": "eslint src/*.ts",
     "rollup": "rollup -c"
   }
 }
