--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "typescript": "^3.6.4"
   },
   "scripts": {
-    "start": "rollup -c --watch",
-    "dev": "rollup -c rollup-dev.config.js --watch",
+    "start": "container start",
+    "dev": "rollup -c rollup-dev.config.js",
     "build": "npm run lint && npm run rollup",
     "lint": "eslint src/*.ts",
     "rollup": "rollup -c"
